--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -1,30 +1,15 @@
-name: Release
+name: Post welcome comment
 on:
-  release:
-    types: [released]
-  workflow_dispatch:
-    inputs:
-      TAG_NAME:
-        description: 'Tag name that the major tag will point to'
-        required: true
-
-env:
-  TAG_NAME: ${{ github.event.inputs.TAG_NAME || github.event.release.tag_name }}
-
+  pull_request:
+    types: [opened]
 permissions:
-  contents: write
-
+  pull-requests: write
 jobs:
-  update_tag:
-    name: Update the major tag to include the ${{ github.event.inputs.TAG_NAME || github.event.release.tag_name }} changes
+  build:
+    name: Post welcome comment
     runs-on: ubuntu-latest
-    environment:
-      # Note: this environment is protected
-      name: Release
     steps:
-      - name: Update the ${{ env.TAG_NAME }} tag
-        id: update-major-tag
-        uses: actions/publish-action@v0.3.0
-        with:
-          source-tag: ${{ env.TAG_NAME }}
-          slack-webhook: ${{ secrets.SLACK_WEBHOOK }}
+      - run: gh pr comment $PR_URL --body "Welcome to the repository!"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
