--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: Step 1, Create a workflow
+name: Post welcome comment
 
 # This step triggers after every push to welcome-workflow.
 # This workflow updates from step 1 to step 2.
@@ -6,10 +6,10 @@ name: Step 1, Create a workflow
 # This will run every time we push to welcome-workflow.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - welcome-workflow
+  pull_request:
+    types: [opened]
+permissions:
+  pull-requests: write
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
