--- a/core/action.yml
+++ b/core/action.yml
@@ -3,7 +3,7 @@ description: 'A GitHub Action to deploy an artifact as a GitHub Pages site'
 author: 'GitHub'
 runs:
 using: 'node20'
-main: 'dist/index.js'
+main: 'src/index.js'
 inputs:
 token:
 description: 'GitHub token'
