--- a/cli/package.json
+++ b/cli/package.json
@@ -1,9 +1,9 @@
 {
   "name": "github-pages",
-  "version": "1.0.0",
+  "version": "6.0.0",
   "description": "CLI to scaffold demo github-pages projects",
   "bin": {
-    "create-demo-vue": "index.js"
+    "create-demo-vue": "index.ts"
   },
   "dependencies": {
     "ncp": "^2.0.0"
