--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -1,9 +1,9 @@
-name: 'kubu-hai'
+name: 'actions'
 
 on:
   push:
     branches:
-      - '"main"'
+      - 'main'
 
 env:
   PROJECT_ID: 'kubu-hai' # TODO: update to your Google Cloud project ID
@@ -27,7 +27,7 @@ jobs:
 
     steps:
       - name: 'Checkout'
-        uses: 'actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709' # actions/checkout@v4
+        uses: 'actions/checkout@8edcb1bdb4e267140fa742c62e395cd74f332709' # actions/checkout@v6
 
       # Configure Workload Identity Federation and generate an access token.
       #
