--- a/cli/package.json
+++ b/cli/package.json
@@ -16,3 +16,10 @@
     "typescript": "^5.0.0"
   }
 }
+
+"scripts": {
+  "lint:check": "eslint .",
+  "test": "jest",
+  "coverage-badge": "coverage-badge -o coverage/badge.svg -p 85",
+  "prepare": "ncc build src/index.ts -o dist"
+}
